--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 			<version>8.0.12</version>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!--  test dependencies -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
