--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://192.168.99.100:3308/carrental
 spring.datasource.username=root
 spring.datasource.password=demo
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
